--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "sku-oauth-app"
 compatibility_date = "2024-08-18"
-compatibility_flags = [ "nodejs_compat" ]
+#compatibility_flags = [ "nodejs_compat" ]
+node_compat = true
 main = "src/index.ts"
 
 [triggers]
