--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "hono": "^4.5.6",
     "jose": "^5.6.3",
     "js-base64": "^3.7.7",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "ts-md5": "^1.3.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
